Is it sufficient to put double brackets around URLs?

--- a/_posts/2014-08-07-first-post.org
+++ b/_posts/2014-08-07-first-post.org
@@ -8,7 +8,7 @@ categories: first-category second
 
 This is the first post woohoo
 
-- http://orcid.org/0000-0002-1338-8900
-- http://scholar.google.com/citations?user=AWRhHlsAAAAJ&hl=en&oi=pll
-- Public pubmed profile: http://www.ncbi.nlm.nih.gov/sites/myncbi/collections/public/1pUY6yX9wdp6ddly0uxWlockq/
+- [[http://orcid.org/0000-0002-1338-8900]]
+- [[http://scholar.google.com/citations?user=AWRhHlsAAAAJ&hl=en&oi=pll]]
+- Public pubmed profile: [[http://www.ncbi.nlm.nih.gov/sites/myncbi/collections/public/1pUY6yX9wdp6ddly0uxWlockq/]]
   - this will likely get out of date
