--- a/_posts/2014-09-12-zotero.md
+++ b/_posts/2014-09-12-zotero.md
@@ -18,6 +18,11 @@ Here is my [profile].
 Zotero could get even better if I find better ways to use it with
 [Zotelo] in emacs or figure out better ways to [integrate] it with the
 firefox omnibar, the file system, etc.
+(I would bookmark attachments, but can't because every attachment gets
+a number, and the numbers aren't consistent across machines.
+It's also laborious to make symlinks to each attachment for a paper,
+because each attachment is stored in a separate directory with a
+gibberish name.  BibDesk might work better for this.)
 
 In case you missed it below, here again is my [ORCID page].
 I am orc number 0000-0002-1338-8900.
