--- a/_posts/2014-10-14-ada.markdown
+++ b/_posts/2014-10-14-ada.markdown
@@ -10,8 +10,18 @@ I'll try to write some more thoughts about Rosalind Franklin
 (and perhaps Barbara McClintock---I'm surprised no one has written
 about her this year).
 
-Someone wrote about Dorothy Hodgkin---sweet.  I'd like to learn more
+Pedantic note: Rosalind technically didn't use crystallography to
+study DNA---she used fiber diffraction.
+
+
+I think we can all agree that Nobel prizes awarded to one to three
+people are no longer a good way to recognize scientific achievents.
+Maybe they never were.
+
+Someone wrote about Dorothy Hodgkin this year---sweet.  I'd like to learn more
 about her.
 
 - http://findingada.com/read-2014s-stories/
   - http://findingada.com/about/faq/
+
+http://blogs.discovermagazine.com/loom/2011/10/06/the-tedious-inevitability-of-nobel-prize-disputes/
