Andrew Gelman is Chuck Norris

--- a/_posts/2014-10-14-ada.markdown
+++ b/_posts/2014-10-14-ada.markdown
@@ -21,6 +21,9 @@ I wish I could still remember the optics.
 I'm nearly certain that the lesson used the kit at the top of this page:
 http://ice.chem.wisc.edu/Catalog/SciKits.html
 
+This article also seems relevant:
+http://homepages.ius.edu/kforinas/P105/PTE000140.pdf
+
 Incidentally, there was also a great multiweek somewhat
 crystallography-related lab project in that class.
 The published description is behind a paywell, sadly.  Really ACS?
