--- a/_posts/2099-12-31-test.markdown
+++ b/_posts/2099-12-31-test.markdown
@@ -10,7 +10,7 @@ Attention conservation notice:
 I am a graduate student.
 Half-baked ideas may appear here.
 I don't recommend linking or bookmarking the pages---they will
-probably go away, and I they certainly won't be stable or historically
+probably go away, and they certainly won't be stable or historically
 accurate.
 
 <!-- Commentary:
