--- a/_posts/2014-10-14-ada.markdown
+++ b/_posts/2014-10-14-ada.markdown
@@ -18,11 +18,11 @@ study DNA---she used fiber diffraction.
 In my biochemistry class there was a great demonstration of how Photo
 51-style diffraction diagrams suggested the helical nature of DNA.
 I wish I could still remember the optics.
-I'm nearly certain that the lesson used the kit at the top of this page:
-http://ice.chem.wisc.edu/Catalog/SciKits.html
-
-This article also seems relevant:
-http://homepages.ius.edu/kforinas/P105/PTE000140.pdf
+I'm nearly certain that the lesson used the kit at the top of
+[this page](http://ice.chem.wisc.edu/Catalog/SciKits.html).
+[This article]
+(http://homepages.ius.edu/kforinas/P105/PTE000140.pdf)
+also seems relevant.
 
 Incidentally, there was also a great multiweek somewhat
 crystallography-related lab project in that class.
