No, they can't be split across lines or have ''

--- a/_posts/2014-10-14-ada.markdown
+++ b/_posts/2014-10-14-ada.markdown
@@ -20,8 +20,7 @@ In my biochemistry class there was a great demonstration of how Photo
 I wish I could still remember the optics.
 I'm nearly certain that the lesson used the kit at the top of
 [this page](http://ice.chem.wisc.edu/Catalog/SciKits.html).
-[This article]
-(http://homepages.ius.edu/kforinas/P105/PTE000140.pdf)
+[This article](http://homepages.ius.edu/kforinas/P105/PTE000140.pdf)
 also seems relevant.
 
 Incidentally, there was also a great multiweek somewhat
