--- a/_posts/2014-10-14-ada.markdown
+++ b/_posts/2014-10-14-ada.markdown
@@ -25,20 +25,20 @@ also seems relevant.
 
 Incidentally, there was also a great multiweek somewhat
 crystallography-related lab project in that class.
-The published description is behind a paywell, sadly.  Really ACS?
-http://pubs.acs.org/doi/full/10.1021/ed8000842
+The published [description](http://pubs.acs.org/doi/full/10.1021/ed8000842)
+is behind a paywell, sadly.  Really ACS?
 
 I think we can all agree that Nobel prizes awarded to one to three
 people are no longer a good way to recognize scientific achievents.
 Maybe they never were.
-See Zimmer (2011).
-http://blogs.discovermagazine.com/loom/2011/10/06/the-tedious-inevitability-of-nobel-prize-disputes/
+See [Zimmer] (2011).
+[Zimmer]:http://blogs.discovermagazine.com/loom/2011/10/06/the-tedious-inevitability-of-nobel-prize-disputes/
 
-Someone wrote about Dorothy Hodgkin this year---sweet.  I'd like to learn more
+Someone [wrote] about Dorothy Hodgkin this year---sweet.  I'd like to learn more
 about her.  I see that my library has a biography on her.
 And maybe she wrote a forward to a book on the SDI/"Star wars"?
 Always a fun topic.
-http://trowelblazers.com/dorothy-crowfoot-hodgkin/
+[wrote]:http://trowelblazers.com/dorothy-crowfoot-hodgkin/
 
 - http://findingada.com/read-2014s-stories/
   - http://findingada.com/about/faq/
