--- a/_posts/2099-12-31-test.markdown
+++ b/_posts/2099-12-31-test.markdown
@@ -28,6 +28,9 @@ accurate.
   - this will likely get out of date
 - Some [small wikipedia contributions](https://en.wikipedia.org/wiki/Special:Contributions/JS_Hoyer)
 - [GitHub repositories](https://github.com/jshoyer?tab=repositories)
+- Zotero [page](https://www.zotero.org/jshoyer) and
+  [CV](https://www.zotero.org/jshoyer/cv)
+  - I'm interested in shared groups---use Zotero to send me a message!
 
 Also relevant (though I don't expect specific links to remain stable):
 [Danforth Center], [WUSTL DBBS].
