Better not to say 'via Zotero'

--- a/_posts/2099-12-31-test.markdown
+++ b/_posts/2099-12-31-test.markdown
@@ -30,7 +30,8 @@ accurate.
 - [GitHub repositories](https://github.com/jshoyer?tab=repositories)
 - Zotero [page](https://www.zotero.org/jshoyer) and
   [CV](https://www.zotero.org/jshoyer/cv)
-  - I'm interested in shared groups---use Zotero to send me a message!
+  - I'm interested in shared groups---if you have ideas
+    send me a message via my Zotero page!
 
 Also relevant (though I don't expect specific links to remain stable):
 [Danforth Center], [WUSTL DBBS].
