--- a/_posts/2014-10-15-rss.markdown
+++ b/_posts/2014-10-15-rss.markdown
@@ -17,18 +17,13 @@ peer-reviewed research.
 However, I now know that
 blogs are faster and more nuanced.
 
-Andrew Gelman is in every leaf and twig.
+Andrew Gelman is in every leaf of every tree.
 
 http://andrewgelman.com/2014/10/14/didnt-say-part-2/
 
 A certain seminar speaker I recently had lunch with
 said that a certain member of his department
 is so outspoken that he draws the anger of zealots.
-
-Twitter bots.
-
-Comments.  Contentious.
-Email preferrable?
 
 Utilitarian Essays recently added an RSS feed.
 Yay!
