Are colons in titles bad?

--- a/_posts/2015-01-07-stat-diary1.md
+++ b/_posts/2015-01-07-stat-diary1.md
@@ -1,12 +1,10 @@
----
-
-title: Resolution: write more
+&#x2014;
+title: I resolve to write more
 layout: default
 categories: 
+&#x2014;
 
----
-
-> [You should all keep statistics diaries.](http://andrewgelman.com/2015/01/07/2015-statistics-diary/#more-24857)
+> [You should all keep statistics diaries.](http://andrewgelman.com/2015/01/07/2015-statistics-diary)
 
 Yes sir.
 
