--- a/_posts/stats-diary.org
+++ b/_posts/stats-diary.org
@@ -3,16 +3,15 @@
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2015-01-07-stat-diary1
 :END:
----
 
-title: Resolution: write more
+---
+title: I resolve to write more
 layout: default
 categories: 
-
 ---
 
 #+BEGIN_QUOTE
-[[http://andrewgelman.com/2015/01/07/2015-statistics-diary/#more-24857][You should all keep statistics diaries.]]
+[[http://andrewgelman.com/2015/01/07/2015-statistics-diary][You should all keep statistics diaries.]]
 #+END_QUOTE
 
 Yes sir.
