Enough for today

--- a/_posts/2015-01-07-stat-diary1.md
+++ b/_posts/2015-01-07-stat-diary1.md
@@ -16,6 +16,10 @@ I hadn't considered that before, but it makes sense.
 
 # 
 
+# New heading
+
 Writing entries in org-mode should streamline things.  
-Untitled sections show up when exported from org-mode to markdown.
+Untitled sections show up as a plain pound sign when exported from
+org-mode to markdown.
+
 <span class="timestamp-wrapper"><span class="timestamp">[2015-01-07 15:25]</span></span>
