--- a/_posts/stats-diary.org
+++ b/_posts/stats-diary.org
@@ -15,9 +15,12 @@ There is a worg tutorial.
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2015-01-07-stat-diary1
 :END:
+
+*** 
 # This has no effect:
 
 #+title: Resolution: write more
+
 #+BEGIN_HTML
 ---
 title: I resolve to write more
@@ -25,6 +28,8 @@ layout: default
 categories: 
 ---
 #+END_HTML
+
+*** Experimenting
 
 #+BEGIN_QUOTE
 [[http://andrewgelman.com/2015/01/07/2015-statistics-diary][You should all keep statistics diaries.]]
@@ -40,7 +45,11 @@ comfortable emotional distance.
 
 I hadn't considered that before, but it makes sense.
 
-*** 
-Writing entries in org-mode should streamline things.  
-Untitled sections show up when exported from org-mode to markdown.
+**** New subheading
+
+Writing entries in org-mode should streamline things.
+Clumsy aspect: have to manually reexport and commit output file.
+Untitled sections show up as a plain pound sign when exported from
+org-mode to markdown.
+
 [2015-01-07 15:25]
