--- a/_posts/2015-01-07-stat-diary1.md
+++ b/_posts/2015-01-07-stat-diary1.md
@@ -1,8 +1,13 @@
+# 
+
+
 ---
 title: I resolve to write more
 layout: default
 categories: 
 ---
+
+# Experimenting
 
 > [You should all keep statistics diaries.](http://andrewgelman.com/2015/01/07/2015-statistics-diary)
 
@@ -14,11 +19,10 @@ Yes sir.
 
 I hadn't considered that before, but it makes sense.
 
-# 
+## New subheading
 
-# New heading
-
-Writing entries in org-mode should streamline things.  
+Writing entries in org-mode should streamline things.
+Clumsy aspect: have to manually reexport and commit output file.
 Untitled sections show up as a plain pound sign when exported from
 org-mode to markdown.
 
