--- a/_posts/2015-01-07-stat-diary1.md
+++ b/_posts/2015-01-07-stat-diary1.md
@@ -1,13 +1,8 @@
-# 
-
-
 ---
 title: I resolve to write more
 layout: default
 categories: 
 ---
-
-# Experimenting
 
 > [You should all keep statistics diaries.](http://andrewgelman.com/2015/01/07/2015-statistics-diary)
 
@@ -19,11 +14,15 @@ Yes sir.
 
 I hadn't considered that before, but it makes sense.
 
-## New subheading
-
 Writing entries in org-mode should streamline things.
 Clumsy aspect: have to manually reexport and commit output file.
 Untitled sections show up as a plain pound sign when exported from
 org-mode to markdown.
 
+Timestamps.
+They alter indentation/paragraph flow.
 <span class="timestamp-wrapper"><span class="timestamp">[2015-01-07 15:25]</span></span>
+
+# The default font size for headings is gigantic.
+
+Also they make things more complicated.
