--- a/_posts/2015-01-07-stat-diary1.md
+++ b/_posts/2015-01-07-stat-diary1.md
@@ -19,8 +19,11 @@ Clumsy aspect: have to manually reexport and commit output file.
 Untitled sections show up as a plain pound sign when exported from
 org-mode to markdown.
 
+# 
+
 Timestamps.
 They alter indentation/paragraph flow.
+Or do they?
 <span class="timestamp-wrapper"><span class="timestamp">[2015-01-07 15:25]</span></span>
 
 # The default font size for headings is gigantic.
