Whining tag, not Rss

--- a/_posts/2015-02-03-rss.md
+++ b/_posts/2015-02-03-rss.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: RSS
+categories: whining
+---
+
 I am sorry that I don't have an RSS feed.
 I like RSS as a technology.
 
