--- a/_posts/stats-diary.org
+++ b/_posts/stats-diary.org
@@ -207,7 +207,7 @@ Makes sense.
 
 [2015-01-12 10:26]
 
-** RSS
+** RSS                                                                :blog:
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2015-02-03-rss
 :END:
@@ -229,5 +229,19 @@ but a problem is going to send me to thunderbird
 
 Like this page:
 https://openaccessbutton.org/advocacy
+
+** Fossil 1.3.1                                                       :blog:
+:PROPERTIES:
+:EXPORT_FILE_NAME: 2015-02-23-fossil
+:END:
+
+http://fossil-scm.org/index.html/info/a56f58299c04bdf2
+
+I agree that git is a bad fit for scientists.
+Learning fossil has been too much fun---it's distracting!
+
+Full list: http://fossil-scm.org/index.html/doc/trunk/www/quotes.wiki
+
+More serious: http://fossil-scm.org/index.html/doc/trunk/www/fossil-v-git.wiki
 
 ** TODO org export without timestamps
