--- a/_posts/2015-02-23-fossil.md
+++ b/_posts/2015-02-23-fossil.md
@@ -1,3 +1,5 @@
+version 1.3.1 just released.
+
 <http://fossil-scm.org/index.html/info/a56f58299c04bdf2>
 
 I agree that git is a bad fit for scientists.
@@ -6,3 +8,9 @@ Learning fossil has been too much fun&#x2014;it's distracting!
 Full list: <http://fossil-scm.org/index.html/doc/trunk/www/quotes.wiki>
 
 More serious: <http://fossil-scm.org/index.html/doc/trunk/www/fossil-v-git.wiki>
+
+Related: recent complaints about jekyll on twitter.
+I will reserve my complaints for markdown itself.
+Org export converted my 'v.' for version above to a '1.'.
+I would tag this post 'whining',
+but that would take too much effort.
