Add title block: hyphenation in file name ignored

--- a/_posts/2015-04-21-anti-git.md
+++ b/_posts/2015-04-21-anti-git.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Don't enforce Git or GitHub as a standard
+categories: whining
+---
+
 Post title named after recent post where *x* = `R`
 that various ecologists linked to.
 See links in previous post.
