--- a/_posts/stats-diary.org
+++ b/_posts/stats-diary.org
@@ -321,13 +321,23 @@ The ease of starting new checkouts
 was one of the primary reasons
 I started to prefer fossil over git this year.
 
+Comment on the gitster's blog:
+#+BEGIN_QUOTE
+"This is accumulating more and more known bugs
+but may prove useful
+once they are fixed."
+#+END_QUOTE
+
+Tried to install: shell not looking in the right place.
+Macs....
+
 ** ShinyStan 2.0.0
 [2015-08-14 12:51]
 
-** R 3.2.2
+** R 3.2.2 "Fire safety"
 [2015-08-22 Sat]
 
-** Firefox 40ish
+** Firefox 40.0
 
 Does anyone else find the 'Library' window
 to be so slow as to be unusable?
