I forgot to export

--- a/_posts/2015-04-21-anti-git.md
+++ b/_posts/2015-04-21-anti-git.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Don't enforce Git or GitHub as a standard
-categories: whining
+categories: whining git
 ---
 
 Post title named after recent post where *x* = `R`
