--- a/_posts/2015-08-13-magit-2.md
+++ b/_posts/2015-08-13-magit-2.md
@@ -1,3 +1,9 @@
+---
+title: Magit 1.2.0
+layout: default
+categories: git emacs TWiV
+---
+
 New release (user interface largely the same),
 and the fact that Junio Hamano is
 (or at least used to be)
