--- a/_posts/2015-08-23-git-2_5.md
+++ b/_posts/2015-08-23-git-2_5.md
@@ -1,7 +1,7 @@
 ---
 title: Git 2.5.0
 layout: default
-categories: 
+categories: git
 ---
 
 It took me a while to notice this.
@@ -10,3 +10,12 @@ about the new `git worktree` command.
 The ease of starting new checkouts
 was one of the primary reasons
 I started to prefer fossil over git this year.
+
+Comment on the gitster's blog:
+
+> "This is accumulating more and more known bugs
+> but may prove useful
+> once they are fixed."
+
+Tried to install: shell not looking in the right place.
+Macs&#x2026;.
